--- a/trunk/application/views/ClearBlue2/edit_post.twig
+++ b/trunk/application/views/ClearBlue2/edit_post.twig
@@ -91,9 +91,9 @@
 				FailureMsg: lang.attachFailed,
 				uploadLimitMsg: lang.attachLimit,
 				uploadLimit: "{{ATTACHMENTLIMIT}}",
-				deleteUrl: "{{BOARD_URL}}index.php/upload/delete",
+				deleteUrl: "{{BOARD_URL}}{{INDEX_PAGE}}/upload/delete",
 				confirmDeletMsg: lang.attachDeletePrompt,
-				fileMgrUrl: "{{BOARD_URL}}index.php/upload/"
+				fileMgrUrl: "{{BOARD_URL}}{{INDEX_PAGE}}/upload/"
 			});
 		});
 	</script>
