--- a/trunk/application/views/ClearBlue2/lostpassword.twig
+++ b/trunk/application/views/ClearBlue2/lostpassword.twig
@@ -21,7 +21,7 @@
 <tr>
 <td colspan="2" class="ui-widget-header centerText">::{{LANG_PWDRECOVER}}::</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}/{{LANG_EMAIL}} [{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
+<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}/{{LANG_EMAIL}} [{{URL_TAG("/register", LANG_REGISTER)|raw}}]</td>
 <td class="ui-widget-content" width="50%">
 	<input type="text" name="recover_info" class="text" size="30" id="recover_info" />
 	{{VALIDATION_USERNAME_EMAIL|raw}}
