--- a/trunk/application/views/ClearBlue2/viewboard.twig
+++ b/trunk/application/views/ClearBlue2/viewboard.twig
@@ -17,10 +17,10 @@
 {% for b in SUBBOARDDATA %}
 <tr>
 	<td class="ui-widget-content centerText">{{ b.id|ReadStat(LOGGEDUSER) ?  IMG("application/views/ClearBlue2/images/old.gif")|raw : IMG("application/views/ClearBlue2/images/new.gif")|raw }}</td>
-	<td class="ui-widget-content"><strong>{{URL_TAG("boards/viewboard/"~ b.id, b.Board)|raw}}</strong>&nbsp;{{URL_TAG("boards/boardFeed/"~ b.id, IMG("application/views/ClearBlue2/images/rss.png"))|raw}} <br />{{b.Description|raw}}<br />{{b.id|SubBoards|raw}}</td>
+	<td class="ui-widget-content"><strong>{{URL_TAG("/viewboard/"~ b.id, b.Board)|raw}}</strong>&nbsp;{{URL_TAG("/feed/"~ b.id, IMG("application/views/ClearBlue2/images/rss.png"))|raw}} <br />{{b.Description|raw}}<br />{{b.id|SubBoards|raw}}</td>
 	<td class="ui-widget-content centerText">{{b.id|counter("TopicCount")}}</td>
 	<td class="ui-widget-content centerText">{{b.id|counter("PostCount")}}</td>
-	<td class="ui-widget-content">{{b.last_update|PostedDate(TimeFormat, TimeZone)}}<br />{{URL_TAG("boards/viewtopic/"~ b.tid~"/"~b.last_page, LANG_POSTEDBY)|raw}} {{b.Posted_User}}</td>
+	<td class="ui-widget-content">{{b.last_update|PostedDate(TimeFormat, TimeZone)}}<br />{{URL_TAG("/viewtopic/"~ b.tid~"/"~b.last_page, LANG_POSTEDBY)|raw}} {{b.Username}}</td>
 </tr>
 {% endfor %}
 </table><br />
@@ -33,14 +33,14 @@
 
 {# can they post a new topic? #}
 {% if CANPOST_TOPIC == 1 %}
-<button id="juiBtnNewTopic" onclick="gotoUrl('{{BOARD_URL}}index.php/boards/newtopic/{{BOARDID}}');">{{LANG_BTNNEWTOPIC}}</button>
+<button id="juiBtnNewTopic" onclick="gotoUrl('{{BOARD_URL}}{{INDEX_PAGE}}/newtopic/{{BOARDID}}');">{{LANG_BTNNEWTOPIC}}</button>
 {% else %}
 <button id="juiBtnLocked">{{LANG_BTNLOCKED}}</button>
 {% endif %}
 
 {# can they post a new poll topic?. #}
 {% if CANPOST_POLL == 1 %}
-<button id="juiBtnNewPoll" onclick="gotoUrl('{{BOARD_URL}}index.php/boards/newpoll/{{BOARDID}}');">{{LANG_BTNNEWPOLL}}</button>
+<button id="juiBtnNewPoll" onclick="gotoUrl('{{BOARD_URL}}{{INDEX_PAGE}}/newpoll/{{BOARDID}}');">{{LANG_BTNNEWPOLL}}</button>
 {% endif %}
 
 {% endif %}
@@ -85,11 +85,11 @@
 {{IMG("application/views/ClearBlue2/images/new.gif")|raw}}
 {% endif %}
 </td>
-<td width="40%" class="ui-widget-content">{{ Attachment(t.tid) ? IMG("application/views/ClearBlue2/images/attachment.png")|raw : "" }} {{URL_TAG("boards/viewtopic/"~ t.tid, t.Topic)|raw}}</td>
-<td width="15%" class="ui-widget-content">{{t.author}}</td>
+<td width="40%" class="ui-widget-content">{{ Attachment(t.tid) ? IMG("application/views/ClearBlue2/images/attachment.png")|raw : "" }} {{URL_TAG("/viewtopic/"~ t.tid, t.Topic)|raw}}</td>
+<td width="15%" class="ui-widget-content">{{t.Username}}</td>
 <td width="10%" class="ui-widget-content centerText">{{t.tid|counter("TopicReplies")}}</td>
 <td width="10%" class="ui-widget-content centerText">{{t.Views|counter("TopicViews")}}</td>
-<td width="20%" class="ui-widget-content">{{t.last_update|PostedDate(TimeFormat, TimeZone)}}<br />{{URL_TAG("boards/viewtopic/"~t.tid~"/"~t.last_page~"#post"~t.pid, LANG_POSTEDBY)|raw}}: {{t.posted_user}}</td>
+<td width="20%" class="ui-widget-content">{{t.last_update|PostedDate(TimeFormat, TimeZone)}}<br />{{URL_TAG("/viewtopic/"~t.tid~"/"~t.last_page~"#post"~t.pid, LANG_POSTEDBY)|raw}}: {{t.Username}}</td>
 </tr>
 {% endfor %}
 
